###########################################################################
###
###  Copyright (c) 2005-2007, Tsujii Laboratory, The University of Tokyo.
###  All rights reserved.
###
###  Name: mayz-manual/Makefile.am
###  Makefile for MAYZ toolkit
###
###########################################################################

mayzmanualdir = $(libdir)/enju/mayz-manual

mayzmanual_DATA = \
	amisfilter.html \
	amisfilter.ja.html \
	development.png \
	development.ja.png \
	forestmaker.html \
	forestmaker.ja.html \
	index.html \
	index.ja.html \
	install.html \
	install.ja.html \
	intro.html \
	intro.ja.html \
	lex2html.html \
	lex2html.ja.html \
	lexextract.html \
	lexextract.ja.html \
	lexrefine.html \
	lexrefine.ja.html \
	mayzup.html \
	mayzup.ja.html \
	modules.html \
	modules.ja.html \
	overview.html \
	overview.ja.html \
	probmodel.png \
	probmodel.ja.png \
	style-index.css \
	style-install.css \
	style-intro.css \
	style-modules.css \
	style-overview.css \
	style-terms.css \
	style-tool.css \
	style-types.css \
	style-usegrammar.css \
	terms.html \
	terms.ja.html \
	treetrans.html \
	treetrans.ja.html \
	types.html \
	types.ja.html \
	unimaker.html \
	unimaker.ja.html \
	up.html \
	up.ja.html \
	up_chart.png \
	up_overview.ja.png \
	up_overview.png \
	up_position.png \
	usegrammar.html \
	usegrammar.ja.html

EXTRA_DIST = $(mayzmanual_DATA)

