###########################################################################
###
###  Copyright (c) 2005-2007, Tsujii Laboratory, The University of Tokyo.
###  All rights reserved.
###
###  Name: mayz/Makefile.am
###  Makefile for MAYZ toolkit
###
###########################################################################

mayzlildir = $(datadir)/liblilfes/mayz

mayzlil_DATA = \
	amismodel.lil \
	display.lil \
	lexentry.lil \
	lexicon.lil \
	moriv.css \
	moriv.lil \
	morivchart.js \
	morivchart.lil \
	morivgrammar.lil \
	morivparser.lil \
	parseall.lil \
	parser.lil \
	sample_hpsg.lil \
	tagger.lil \
	up.lil \
	word.lil

noinst_DATA = \
	binarizer.lil \
	countlex.lil \
	coverage.lil \
	deriv2lexseq.lil \
	derivmake.lil \
	derivtypes.lil \
	evalparse.lil \
	forestmake.lil \
	init.lil \
	lexextract.lil \
	lexrefine.lil \
	markhead.lil \
	morivtrans.lil \
	no_fom.lil \
	treeio.lil \
	treematch.lil \
	treetrans.lil \
	treetypes.lil

EXTRA_DIST = $(mayzlil_DATA) $(noinst_DATA)

