###########################################################################
###
###  Copyright (c) 2005-2007, Tsujii Laboratory, The University of Tokyo.
###  All rights reserved.
###
###  Name: mogura-devel/Makefile.am
###  Makefile for Mogura
###
###########################################################################

# noinst_DATA = \
#     cfg_compile.lil \
#     restriction-enju-2_3.lil \
#     restriction.lil \
#     train.lil \
#     xml2schematree.prl

# EXTRA_DIST = $(noinst_DATA)

