###########################################################################
###
###  Copyright (c) 2005-2007, Tsujii Laboratory, The University of Tokyo.
###  All rights reserved.
###
###  Name: mogura/Makefile.am
###  Makefile for Mogura
###
###########################################################################

moguralildir = $(datadir)/liblilfes/mogura

moguralil_DATA = \
    grammar_interface.lil \
    grammar_impl-2_3.lil \
    grammar.lil \
    model.lil \
    genia-grammar.lil \
    genia-model.lil \
    brown-grammar.lil \
    brown-model.lil \
    output_super.lil

EXTRA_DIST = $(moguralil_DATA)

