EXTRA_DIST = enju.bat install.bat mogura.bat \
	vc/vc.sln vc/vc.suo \
	vc/enju/enju/enju.vcxproj vc/enju/enju/enju.vcxproj.filters vc/enju/enju/enju.vcxproj.user \
	vc/enju/enju-morph/enju-morph.vcxproj vc/enju/enju-morph/enju-morph.vcxproj.filters vc/enju/enju-morph/enju-morph.vcxproj.user \
	vc/lilfes/liblilfes/liblilfes.vcxproj vc/lilfes/liblilfes/liblilfes.vcxproj.filters vc/lilfes/liblilfes/liblilfes.vcxproj.user \
	vc/lilfes/lilfes/lilfes.vcxproj vc/lilfes/lilfes/lilfes.vcxproj.filters vc/lilfes/lilfes/lilfes.vcxproj.user \
	vc/mayz/amisfilter/amisfilter.vcxproj vc/mayz/amisfilter/amisfilter.vcxproj.filters vc/mayz/amisfilter/amisfilter.vcxproj.user \
	vc/mayz/lex2html/lex2html.vcxproj vc/mayz/lex2html/lex2html.vcxproj.filters vc/mayz/lex2html/lex2html.vcxproj.user \
	vc/mayz/lexmerge/lexmerge.vcxproj vc/mayz/lexmerge/lexmerge.vcxproj.filters vc/mayz/lexmerge/lexmerge.vcxproj.user \
	vc/mayz/libmayz/libmayz.vcxproj vc/mayz/libmayz/libmayz.vcxproj.filters vc/mayz/libmayz/libmayz.vcxproj.user \
	vc/mayz/super/super.vcxproj vc/mayz/super/super.vcxproj.filters vc/mayz/super/super.vcxproj.user \
	vc/mayz/unimaker/unimaker.vcxproj vc/mayz/unimaker/unimaker.vcxproj.filters vc/mayz/unimaker/unimaker.vcxproj.user \
	vc/mayz/forestmaker/forestmaker.vcxproj vc/mayz/forestmaker/forestmaker.vcxproj.filters vc/mayz/forestmaker/forestmaker.vcxproj.user \
	vc/mayz/lexextract/lexextract.vcxproj vc/mayz/lexextract/lexextract.vcxproj.filters vc/mayz/lexextract/lexextract.vcxproj.user \
	vc/mayz/lexrefine/lexrefine.vcxproj vc/mayz/lexrefine/lexrefine.vcxproj.filters vc/mayz/lexrefine/lexrefine.vcxproj.user \
	vc/mayz/libup/libup.vcxproj vc/mayz/libup/libup.vcxproj.filters vc/mayz/libup/libup.vcxproj.user \
	vc/mayz/treetrans/treetrans.vcxproj vc/mayz/treetrans/treetrans.vcxproj.filters vc/mayz/treetrans/treetrans.vcxproj.user \
	vc/mayz/up/up.vcxproj vc/mayz/up/up.vcxproj.filters vc/mayz/up/up.vcxproj.user \
	vc/mogura/mogura/mogura.vcxproj vc/mogura/mogura/mogura.vcxproj.filters vc/mogura/mogura/mogura.vcxproj.user \
	vc/stepp-tagger/stepp/stepp.vcxproj vc/stepp-tagger/stepp/stepp.vcxproj.filters vc/stepp-tagger/stepp/stepp.vcxproj.user \
	vc/stepp-tagger/stepp-eval/stepp-eval.vcxproj vc/stepp-tagger/stepp-eval/stepp-eval.vcxproj.filters vc/stepp-tagger/stepp-eval/stepp-eval.vcxproj.user \
	vc/stepp-tagger/stepp-learn/stepp-learn.vcxproj vc/stepp-tagger/stepp-learn/stepp-learn.vcxproj.filters vc/stepp-tagger/stepp-learn/stepp-learn.vcxproj.user

