###########################################################################
###
###  Copyright (c) 2005-2007, Tsujii Laboratory, The University of Tokyo.
###  All rights reserved.
###
###  Name: enju-manual/Makefile.am
###  Makefile for Enju
###
###########################################################################

enjumanualdir = $(libdir)/enju/enju-manual

enjumanual_DATA = \
	I_sign.xhtml \
	advanced.html \
	advanced.ja.html \
	architecture.ja.png \
	architecture.png \
	best_edge_sign.html \
	best_fom_sign.html \
	browsefs.xhtml \
	browsepas.xhtml \
	browsetree.xhtml \
	chart_ex.png \
	derivation.xhtml \
	develindex.html \
	develindex.ja.html \
	develmoriv.html \
	develmoriv.ja.html \
	develstyle.css \
	enju-output-spec.html \
	enju-xml-format.html \
	enju-xml-format-style.css \
	ex_deriv.html \
	ex_deriv_plays.html \
	ex_development.html \
	ex_development.ja.html \
	ex_grammar.html \
	ex_grammar.ja.html \
	ex_input_tree.html \
	ex_lexeme.html \
	ex_lexent.html \
	ex_lexent_passive.html \
	ex_parse_tree.html \
	ex_process.html \
	ex_process.ja.html \
	ex_result_tree.html \
	ex_transformed1.html \
	ex_transformed2.html \
	faq.html \
	faq.ja.html \
	files.html \
	files.ja.html \
	forest.html \
	forest.ja.html \
	fs.css \
	fs.xsl \
	grammar.html \
	grammar.ja.html \
	him_sign.xhtml \
	index.html \
	index.ja.html \
	install.html \
	install.ja.html \
	intro.html \
	intro.ja.html \
	lexextract.html \
	lexextract.ja.html \
	lexicon.html \
	lexicon.ja.html \
	lexrules.html \
	lexrules.ja.html \
	moriv.css \
	moriv.html \
	moriv.ja.html \
	mothersign.html \
	output.html \
	output.ja.html \
	parser.html \
	parser.ja.html \
	pas.html \
	pas.ja.html \
	pashighlight.js \
	preprocess.html \
	preprocess.ja.html \
	probmodel.html \
	probmodel.ja.html \
	s12sign.html \
	s14sign.html \
	s24sign.html \
	saw_lexent.html \
	saw_lextemp.html \
	schemata.html \
	schemata.ja.html \
	show_fstree.png \
	sign.html \
	sign.ja.html \
	style.css \
	system.html \
	system.ja.html \
	thanked_sign.xhtml \
	transformed.xhtml \
	transrules.html \
	transrules.ja.html \
	unigram.html \
	unigram.ja.html \
	up_chart.png

EXTRA_DIST = $(enjumanual_DATA)

