###########################################################################
###
###  Copyright (c) 2005-2008, Tsujii Laboratory, The University of Tokyo.
###  All rights reserved.
###
###  Name: enju2ptb/script/Makefile.am
###
###########################################################################

enju2ptb_scriptdir = $(datadir)/enju2ptb/script

enju2ptb_script_SCRIPTS = \
    markRBNot.sed \
    ptbescape.sed \
    unmark.sed \
    strip_trees.prl \
    xml2lisp.prl

EXTRA_DIST = $(enju2ptb_script_SCRIPTS)

