###########################################################################
###
###  Copyright (c) 2005-2008, Tsujii Laboratory, The University of Tokyo.
###  All rights reserved.
###
###  Name: enju2ptb/src/Makefile.am
###
###########################################################################

enju2ptb_bindir = $(datadir)/enju2ptb/bin

enju2ptb_bin_PROGRAMS = GluedTreeConv extractTreePair markNpb2 raiseComma
noinst_HEADERS = Config.h Lex.h PennTree.h ProgressBar.h Subtree.h SymbolTable.h

GluedTreeConv_SOURCES = GluedTreeConv.cc
extractTreePair_SOURCES = extractTreePair.cc
markNpb2_SOURCES = markNpb2.cc
raiseComma_SOURCES = raiseComma.cc

