#*
#* $Id: Makefile.am,v 1.1 2004-07-02 08:58:11 yusuke Exp $
#*
#*    Copyright (c) 1997-1998, Makino Takaki
#*
#*    You may distribute this file under the terms of the Artistic License.
#*

elispsdir = $(datadir)/emacs/site-lisp

elisps_DATA = \
	hilit19-for-lilfes-mode.el \
	lilfes-mode.el \
	lilfes-mode21.el

EXTRA_DIST = $(elisps_DATA)

